--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sked-tape",
   "description": "Schedule component written in pure JS that represents events in tape manner.",
+  "keywords": ["schedule"],
   "version": "0.0.2",
   "main": "src/main.ts",
   "scripts": {
