--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "sked-tape",
   "description": "Schedule component written in pure JS that represents events in tape manner.",
-  "keywords": ["schedule"],
-  "version": "0.0.2",
+  "keywords": [
+    "schedule"
+  ],
+  "version": "0.0.3",
   "main": "src/main.ts",
   "scripts": {
     "start": "webpack-dev-server",
