--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:prod": "webpack --mode production",
     "watch": "webpack --watch --mode development",
     "lint": "tslint --config tslint.json \"src/**/*.{ts,tsx}\"",
-    "test": "jest"
+    "test": "jest",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "lodash": "^4.17.15"
